// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MediaCard component 1`] = `
<div
  class="mediaCard noDownloadList"
>
  <div
    class="header"
  >
    <div
      class="description"
    >
      <div
        class="title"
      >
        <div
          class="titleText"
        >
          <div
            aria-label="Test"
            class="croppedText"
            title="Test"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              Te
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                st
              </span>
            </div>
            <div
              class="whole"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        class="meta"
      >
        <div
          aria-label="Test/Test"
          class="croppedText"
          title="Test/Test"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            Test/
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              Test
            </span>
          </div>
          <div
            class="whole"
          >
            Test/Test
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="media"
  >
    <img
      alt="Test"
      src="http://lorempixel.com/300/200"
    />
    <div
      class="cover"
    />
  </div>
</div>
`;

exports[`Render a MediaCard component with a checkbox for selection 1`] = `
<div
  class="mediaCard noDownloadList"
>
  <div
    class="header"
  >
    <div
      class="description"
    >
      <div
        class="title"
      >
        <label
          class="label"
        >
          <span
            class="switch checkbox dark checkbox"
          >
            <input
              type="checkbox"
            />
            <span />
          </span>
          <div>
            <div
              class="titleText"
            >
              <div
                aria-label="Test"
                class="croppedText"
                title="Test"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Te
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    st
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Test
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="meta"
      >
        <div
          aria-label="Test/Test"
          class="croppedText"
          title="Test/Test"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            Test/
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              Test
            </span>
          </div>
          <div
            class="whole"
          >
            Test/Test
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="media"
  >
    <img
      alt="Test"
      src="http://lorempixel.com/300/200"
    />
    <div
      class="cover"
    />
  </div>
</div>
`;

exports[`Render a MediaCard with download list 1`] = `
"<div>
  <div class=\\"backdrop fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <ul style=\\"top: 10px; position: fixed; pointer-events: auto; left: 10px;\\" class=\\"menu\\">
      <li class=\\"item\\">
        <button><span class=\\"content\\">Direct download<span class=\\"copyText\\"></span></span>
        </button>
      </li>
      <li class=\\"divider\\"></li>
      <li class=\\"item\\">
        <button type=\\"button\\" class=\\"\\" data-clipboard-text=\\"http://lorempixel.com/300/200\\"><span class=\\"content\\">300/200<span class=\\"copyText\\">Copy URL</span></span>
        </button>
      </li>
      <li class=\\"item\\">
        <button type=\\"button\\" class=\\"\\" data-clipboard-text=\\"http://lorempixel.com/600/300\\"><span class=\\"content\\">600/300<span class=\\"copyText\\">Copy URL</span></span>
        </button>
      </li>
      <li class=\\"item\\">
        <button type=\\"button\\" class=\\"\\" data-clipboard-text=\\"http://lorempixel.com/150/200\\"><span class=\\"content\\">150/200<span class=\\"copyText\\">Copy URL</span></span>
        </button>
      </li>
    </ul>
  </div>
</div>"
`;
